--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "rust-spi"
 version = "0.1.0"
 edition = "2018"
+authors = ["Patrick Oppel <patrick.oppel94@gmail.com"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
