--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust-spi"
+name = "spi-rs"
 version = "0.1.0"
 edition = "2018"
 authors = ["Patrick Oppel <patrick.oppel94@gmail.com"]
